! Change artwork hmtl img margin

--- a/museum/templates/museum/admin/change_form.html
+++ b/museum/templates/museum/admin/change_form.html
@@ -2,34 +2,36 @@
 
 {% block field_sets %}
 <div class="row mb-2">
-  <div id="img" class="col-4" style="background-repeat:no-repeat;background-size:contain;">
-    <script type="text/javascript">
-      var fr = new FileReader();
-      fr.onload = function(){
-        django.jQuery('#img').css('background-image', 'url("' + fr.result + '")');
-      }
-      function update($){
-        console.log('update');
-        var url = $('#id_url_online').val();
-        if(url.length > 0){
+  <div class="col-4">
+    <div id="img" style="background-repeat:no-repeat;background-size:contain;height:100%;">
+      <script type="text/javascript">
+        var fr = new FileReader();
+        fr.onload = function(){
+          django.jQuery('#img').css('background-image', 'url("' + fr.result + '")');
+        }
+        function update($){
+          console.log('update');
+          var url = $('#id_url_online').val();
+          if(url.length > 0){
+            console.log('1');
+            $('#img').css('background-image', 'url('+url+')');
+            return;
+          }
           console.log('1');
-          $('#img').css('background-image', 'url('+url+')');
-          return;
+          var files = document.getElementById('id_url_local').files;
+          console.log('2', files);
+          if(files.length > 0){
+            console.log('3');
+            fr.readAsDataURL(files[0]);
+          }
         }
-        console.log('1');
-        var files = document.getElementById('id_url_local').files;
-        console.log('2', files);
-        if(files.length > 0){
-          console.log('3');
-          fr.readAsDataURL(files[0]);
-        }
-      }
-      django.jQuery(function($){
-        $('#id_url_online').change(function(){ update($); });
-        $('#id_url_local').change(function(){ update($); });
-        update($);
-      });
-    </script>
+        django.jQuery(function($){
+          $('#id_url_online').change(function(){ update($); });
+          $('#id_url_local').change(function(){ update($); });
+          update($);
+        });
+      </script>
+    </div>
   </div>
   <div class="col-8">
     {{block.super}}
