--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'bootstrap-4.0.0/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'admin/admin.css' %}">
 {% endblock %}
@@ -13,6 +14,7 @@
     <a href="{% url 'admin:index' %}">Home</a> -
     <a href="{% url 'admin:museum_artwork_changelist' %}">Museum & artworks</a> -
     <a href="{% url 'admin:museum_artwork_changelist' %}rmngp">Add artwork from RMNGP</a> -
+    <a href="{% url 'admin:museum_artwork_changelist' %}metmuseum">Add artwork from the MET</a> -
     <a href="{% url 'reset' %}">Reset times played to 0<a/>
   </div>
 {% endif %}
