--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -15,6 +15,7 @@
     <a href="{% url 'admin:museum_artwork_changelist' %}">Museum & artworks</a> -
     <a href="{% url 'admin:museum_artwork_changelist' %}rmngp">Add artwork from RMNGP</a> -
     <a href="{% url 'admin:museum_artwork_changelist' %}metmuseum">Add artwork from the MET</a> -
+    <a href="{% url 'admin:museum_artwork_changelist' %}rijks">Add artwork from the Rijks</a> -
     <a href="{% url 'reset' %}">Reset times played to 0<a/>
   </div>
 {% endif %}
