--- a/museum/static/index.css
+++ b/museum/static/index.css
@@ -1,12 +1,13 @@
 body {
   background: black;
 }
-.img-height{ height:100vh; }
+.img-height{ height: 100vh; }
 #img {
   background-size:contain;
   background-repeat: no-repeat;
   background-position: center;
 }
+#author_country_alpha2 { height: 2vh; }
 h1 { font-size: 1rem; }
 h2 { font-size: .8rem; }
 #timeoutInterval {width:55px}
