--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -69,25 +69,13 @@
         </div>
       </div>
     </footer>
+    <script>alert('downloading jquery');</script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script>alert('downloading jquery OK');</script>
     <script>
       $(function(){
         alert('jquery ok');
       })
     </script>
-    <script src="{% static 'es6-promise-4/es6-promise.min.js' %}"></script> <!-- ES6 polyfill for Promises used by axios -->
-    <script src="{% static 'axios-0.18.0/axios.min.js' %}"></script>
-    <script src="{% static 'vue-2.5.22/vue.min.js' %}"></script>
-    <script type="text/javascript">
-      var urlNext = '{% url 'next' %}';
-      var urlAdminArtwork = '{% url 'admin:museum_artwork_change' 999 %}';
-      var MEDIA_URL = '{{ MEDIA_URL }}';
-      try {
-        var app2 = new Vue({});
-      catch (err) {
-        alert(err);
-      }
-    </script>
-    <script src="{% static 'index.js' %}" charset="utf-8"></script>
   </body>
 </html>
