--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -78,6 +78,7 @@
     <script>debug('Downloading jquery');</script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script>debug('Downloading jquery OK');</script>
+    <script>debug(jQuery);</script>
     <script>
       try{
         debug('IIFE...');
