--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -78,9 +78,10 @@
     <script>debug('Downloading jquery');</script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <script>debug('Downloading jquery OK');</script>
-    <script>debug(jQuery);</script>
     <script>
       try{
+        debug(jQuery);
+        debug(jQuery());
         debug('IIFE...');
         (function($) {
           debug('IIFE OK');
