--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -95,5 +95,6 @@
         alert(err);
       }
     </script>
+    <script src="{% static 'index.jQuery.js' %}" charset="utf-8"></script>
   </body>
 </html>
