--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -20,7 +20,7 @@
 
           </div>
           <div class="col-lg-8 img-height">
-            <div class="img-height" id="img" v-if="artwork && getArtworkUrl()" :style="{'background-image':'url('+getArtworkUrl()+')'}"></div>
+            <div class="img-height" id="img" height="200"></div>
           </div>
           <div class="col-lg-2 w3-display-container">
             <div class="w3-display-middle full-width">
