--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="{% static 'index.css' %}">
   </head>
   <body class="container-fluid">
-    <div id="debug"
-      style="background:white;color:black;font-size:16">
-    </div>
     <main class="row text-center text-light" id="app">
       <div class="col">
         <div class="row">
@@ -25,8 +22,8 @@
           <div class="col-lg-2 w3-display-container">
             <div class="w3-display-middle full-width">
               {% verbatim %}
-              <h1>{{artwork.name}}&nbsp;</h1>
-              <h2 class="text-capitalize">{{artwork.author}}&nbsp;</h2>
+              <h1 id="artwork_name">&nbsp;</h1>
+              <h2 id="artwork_author" class="text-capitalize">&nbsp;</h2>
               <p v-if="artwork.author_country_alpha2">
                 <img :src="'https://cdn.staticaly.com/gh/hjnilsson/country-flags/master/svg/'+artwork.author_country_alpha2.toLowerCase()+'.svg'" id="author_country_alpha2"/>
               </p>
@@ -72,6 +69,9 @@
         </div>
       </div>
     </footer>
+    <div id="debug"
+      style="background:white;color:black;font-size:16">
+    </div>
     <script>function debug(text){
       document.getElementById('debug').innerHTML += text+'<br/>';
     }</script>
