--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -28,7 +28,7 @@
                 <img :src="'https://cdn.staticaly.com/gh/hjnilsson/country-flags/master/svg/'+artwork.author_country_alpha2.toLowerCase()+'.svg'" id="author_country_alpha2"/>
               </p>
               <p class="text-capitalize text-secondary">
-                <small>{{artwork.date_display}}</small>
+                <small id="artwork_date_display"></small>
               </p>
               {% endverbatim %}
             </div>
