! height & title & date

--- a/museum/templates/museum/index.html
+++ b/museum/templates/museum/index.html
@@ -22,8 +22,8 @@
           <div class="col-lg-2 w3-display-container">
             <div class="w3-display-middle full-width">
               {% verbatim %}
-              <h1 id="artwork_name">&nbsp;</h1>
-              <h2 id="artwork_author" class="text-capitalize">&nbsp;</h2>
+              <h1 style="font-size:15pt;" id="artwork_name">&nbsp;</h1>
+              <h2 style="font-size:15px;" id="artwork_author" class="text-capitalize">&nbsp;</h2>
               <p v-if="artwork.author_country_alpha2">
                 <img :src="'https://cdn.staticaly.com/gh/hjnilsson/country-flags/master/svg/'+artwork.author_country_alpha2.toLowerCase()+'.svg'" id="author_country_alpha2"/>
               </p>
