--- a/museum/templates/museum/index.oldBrowser.html
+++ b/museum/templates/museum/index.oldBrowser.html
@@ -95,6 +95,6 @@
         alert(err);
       }
     </script>
-    <script src="{% static 'index.jQuery.js' %}" charset="utf-8"></script>
+    <script src="{% static 'index.oldBrowser.js' %}" charset="utf-8"></script>
   </body>
 </html>
