--- a/museum/templates/museum/index.oldBrowser.html
+++ b/museum/templates/museum/index.oldBrowser.html
@@ -6,19 +6,16 @@
     <title>Musée salon</title>
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="{% static 'index.css' %}">
+    <link rel="stylesheet" href="{% static 'index.oldBrowser.css' %}">
   </head>
   <body class="container-fluid">
-    <main class="row text-center text-light" id="app">
-      <div class="col">
-        <div class="row">
-          <div class="col-lg-2">
-
-          </div>
-          <div class="col-lg-8 img-height">
+    <main class="text-center text-light" id="app">
+      <div class="">
+        <div class="">
+          <div class="img-height">
             <img id="img" src="{% static 'iot-museumx64.png' %}"/>
           </div>
-          <div class="col-lg-2 w3-display-container">
+          <div class="w3-display-container">
             <div class="w3-display-middle full-width">
               {% verbatim %}
               <h1 style="font-size:15pt;" id="artwork_name" class="w3-text-white">&nbsp;</h1>
