--- a/museum/templates/museum/index.oldBrowser.html
+++ b/museum/templates/museum/index.oldBrowser.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load gtm_tags %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="{% static 'index.oldBrowser.css' %}">
+    {% gtm_head %}
   </head>
   <body class="container-fluid">
     <main class="w3-center w3-text-light-gray" id="app">
@@ -91,5 +93,6 @@
         alert(err);
       }
     </script>
+    {% gtm_body %}
   </body>
 </html>
